src/objects/Int_Agreement_Exposure__c.object
<CustomObject>
    <description>Int Agreement Exposure</description>
    <fields>
        <fullName>Accrued_Interest_Amount__c</fullName>
        <description>Accrued Interest Amount</description>
        <label>Accrued Interest Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Agreement Name</description>
        <label>Agreement Name</label>
        <referenceTo>Int_Agreement__c</referenceTo>
        <relationshipLabel>Int Agreements Exposure</relationshipLabel>
        <relationshipName>Int_Agreements_Exposure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Number__c</fullName>
        <description>Agreement Number</description>
        <label>Agreement Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Source_System__c</fullName>
        <description>Agreement Source System</description>
        <label>Agreement Source System</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrears_Amount__c</fullName>
        <description>Arrears Amount</description>
        <label>Arrears Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_In_Arrears__c</fullName>
        <description>Days In Arrears</description>
        <label>Days In Arrears</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exposure_Booked__c</fullName>
        <description>Exposure Booked</description>
        <label>Exposure Booked</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exposure_Type__c</fullName>
        <description>Exposure Type</description>
        <label>Exposure Type</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Principal_Balance_Amount__c</fullName>
        <description>Net Principal Balance Amount</description>
        <label>Net Principal Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Arrears_Amount__c</fullName>
        <description>Other Arrears Amount</description>
        <label>Other Arrears Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Days_in_Arrears__c</fullName>
        <description>Other Days in Arrears</description>
        <label>Other Days in Arrears</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <label>Int Agreement Exposure</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Arrears_Amount__c</columns>
        <columns>Committed__c</columns>
        <columns>Exposure_Booked__c</columns>
        <columns>Exposure_Type__c</columns>
        <columns>Days_In_Arrears__c</columns>
        <columns>Agreement_Number__c</columns>
        <columns>Agreement_Name__c</columns>
        <columns>Net_Principal_Balance_Amount__c</columns>
        <columns>Accrued_Interest_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AGE-{0000000000}</displayFormat>
        <label>Agreement Exposure Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Agreements Exposure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>